--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <body>
   <h2>Practical Machine Learning Assignment and Peer Assessment</h2>
+  
+  Please view the report on this <a href="HumanActivityRecognition.html">link</a>.
 </body>
 </html>
